# snu-econ-analysis

./: .gitignore  init.sh  main.py  package.json  pnpm-lock.yaml  pyproject.toml
assignment/1-1/: data.csv  data.ts  data_raw.csv  main.py  modules.py  preprocessing.py  report.md
assignment/1-3/: main.py  report3.md
practices/: practice1_.py  practice2_.py  practice2_5.py  practice3.py  practice4_.py  practice4_5.py
ritvikmath/: ARMA Model.py  Anomaly Detection.py  Augmented Dickey-Fuller Test.py  GARCH Model.py  GARCH Stock Modeling.py  Granger Causality.py  MA Model.py  Model Selection.py  SARIMA Model.py  STL Decomposition.py  Time Series Data Preprocessing.py  Time Series Data.py  Undo Stationary Transformations.py  VAR Model.py
